--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,69 @@
 *,html{
-   margin:0;
+   margin: 0;
    padding: 0;
    outline: none;
-   font-family: 'Open Sans', sans-serif;
 }
 body{
-   font-weight: 400;
-   max-width: 1000px;
-   margin: 0 auto;
-   background-color: #303030;
+   background-color: rgb(49, 49, 49);
    color: #fff;
+   text-shadow: black 0 0 10px;
 }
-h1{
-   margin-top: 60px;
+.header{
+   padding: 40px 0;
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   justify-content: center;
 }
-
 .header h1{
+   font-size: 40px;
    text-transform: uppercase;
 }
-.header p{
-   font-size: 18px;
+.header p {
+   font-size: 20px;
+   padding-bottom: 20px;
 }
-button{
-   position: relative;
-   margin-top: 20px;
-   padding: 10px 20px;
+.ghoul{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+}
+#btn{
+   border: none;
+   padding: 20px 30px;
    border-radius: 20px;
-   border: 1px solid;
-   background: #fff;
    font-size: 20px;
 }
-button:active{
-   top: 5px;
-   right: -2px;
-}
-button:hover{
-   background-color: rgb(194, 194, 194);
-   transition: .3s;
-}
-
-#script{
-   margin-top: 50px;
+.wrapper{
+   position: relative;
    display: flex;
-   flex-direction: column;
    align-items: center;
-
-
-   background-image: url('https://pbs.twimg.com/profile_images/1242377036020117504/6AunhXRx.jpg');
-   background-repeat: no-repeat;
-   background-position: bottom;
-   background-size: 100%;
+   justify-content: center;
+   min-height: 100vh;
+   overflow: hidden;
 }
-
-
-#script p {
-   font-size: 40px;
-   color: #fff;
-   text-shadow: 2px 2px 2px #000;
-}
-
-#img{
+.video{
    display: none;
-   width: 800px;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   z-index: -2;
+   overflow: hidden;
+}
+.video::before{
+   content: "";
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0,0,0,.5);
+}
+.video video{
+   min-height: 100vh;
+   width: 100vw;
+}
+#content p {
+   font-size: 32px;
 }
